--- a/config/zones/US-AK-SEAPA.yaml
+++ b/config/zones/US-AK-SEAPA.yaml
@@ -1,60 +1,43 @@
 bounding_box:
-- - -133.48077226694252
-  - 54.79253861844952
-- - -131.02552047299423
-  - 57.32198154784774
+  - - -133.48077226694252
+    - 54.79253861844952
+  - - -131.02552047299423
+    - 57.32198154784774
 contributors:
-- wrma6
+  - wrma6
 country: US
-country_name: USA
 delays:
   production: 2
 emissionFactors:
   lifecycle:
-    biomass:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021
-      value: 280.6015234636058
-    coal:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 1044.16897110535
-    gas:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 522.4735945289923
-    geothermal:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 116.28737905336972
-    oil:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 998.5315891025153
+    battery discharge:
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 27.14
+    hydro discharge:
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 27.14
 fallbackZoneMixes:
   powerOriginRatios:
-  - _source: Electricity Maps, 2024 average
-    datetime: '2024-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.0
-      gas: 0.0
-      geothermal: 0.0
-      hydro: 0.9950322513728563
-      hydro discharge: 0.0
-      nuclear: 0.0
-      oil: 0.004966263956675667
-      solar: 0.0
-      unknown: 0.0
-      wind: 0.0
+    - _source: Electricity Maps, 2024 average
+      datetime: '2024-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.0
+        gas: 0.0
+        geothermal: 0.0
+        hydro: 0.9950322513728563
+        hydro discharge: 0.0
+        nuclear: 0.0
+        oil: 0.004966263956675667
+        solar: 0.0
+        unknown: 0.0
+        wind: 0.0
 parsers:
   production: SEAPA.fetch_production
 region: Americas
 timezone: America/Anchorage
 zone_name: Southeast Alaska Power Agency
+country_name: USA
