--- a/config/zones/US-FLA-FMPP.yaml
+++ b/config/zones/US-FLA-FMPP.yaml
@@ -1,101 +1,101 @@
 bounding_box:
-- - -83.03593
-  - 24.044093
-- - -79.53074
-  - 30.69435
+  - - -83.03593
+    - 24.044093
+  - - -79.53074
+    - 30.69435
 capacity:
   battery storage:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   biomass:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 45.5
-  - datetime: '2019-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 45.5
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 0.0
   coal:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 1292.8
-  - datetime: '2021-04-01'
-    source: EIA.gov
-    value: 929.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1292.8
+    - datetime: '2021-04-01'
+      source: EIA.gov
+      value: 929.0
   gas:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 2535.8
-  - datetime: '2019-01-01'
-    source: EIA.gov
-    value: 2506.3
-  - datetime: '2020-01-01'
-    source: EIA.gov
-    value: 2483.9
-  - datetime: '2020-06-01'
-    source: EIA.gov
-    value: 2487.9
-  - datetime: '2021-01-01'
-    source: EIA.gov
-    value: 2502.9
-  - datetime: '2024-12-01'
-    source: EIA.gov
-    value: 2562.9
-  - datetime: '2025-01-01'
-    source: EIA.gov
-    value: 2622.9
-  - datetime: '2025-02-01'
-    source: EIA.gov
-    value: 2597.3
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2535.8
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 2506.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 2483.9
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 2487.9
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 2502.9
+    - datetime: '2024-12-01'
+      source: EIA.gov
+      value: 2562.9
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 2622.9
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 2597.3
   geothermal:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   hydro:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   hydro storage:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   nuclear:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   oil:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 93.8
-  - datetime: '2023-01-01'
-    source: EIA.gov
-    value: 87.8
-  - datetime: '2025-02-01'
-    source: EIA.gov
-    value: 220.3
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 93.8
+    - datetime: '2023-01-01'
+      source: EIA.gov
+      value: 87.8
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 220.3
   solar:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 9.0
-  - datetime: '2017-09-01'
-    source: EIA.gov
-    value: 17.9
-  - datetime: '2020-06-01'
-    source: EIA.gov
-    value: 166.9
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 9.0
+    - datetime: '2017-09-01'
+      source: EIA.gov
+      value: 17.9
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 166.9
   unknown:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   wind:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
 comment: Florida Municipal Power Pool
 contributors:
-- systemcatch
-- robertahunt
-- KabelWlan
+  - systemcatch
+  - robertahunt
+  - KabelWlan
 country: US
 country_name: USA
 currency: USD
@@ -104,181 +104,309 @@ delays:
   consumptionForecast: 30
   production: 48
 emissionFactors:
-  lifecycle:
-    biomass:
-    - _comment: Mean of all US zones
+  direct:
+    battery discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 463.8638531590523
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 519.3433928611411
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 519.3431855426442
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 532.8079191681607
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 510.5175697626441
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 515.8642003114278
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 490.1531912006671
+    coal:
+      - datetime: '2020-01-01'
+        source: eGrid 2020
+        value: 768.4856555
+      - datetime: '2021-01-01'
+        source: eGrid 2021
+        value: 806.7
+    gas:
+      - datetime: '2020-01-01'
+        source: eGrid 2020
+        value: 446.015972
+      - datetime: '2021-01-01'
+        source: eGrid 2021
+        value: 439.9
+    hydro discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 463.8638531590523
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 519.3433928611411
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 519.3431855426442
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 532.8079191681607
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 510.5175697626441
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 515.8642003114278
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 490.1531912006671
+    oil:
       datetime: '2021-01-01'
       source: eGrid 2021
-      value: 280.6015234636058
+      value: 791.37
+  lifecycle:
+    battery discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 561.0881002838488
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 609.5529341397407
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 599.11
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 624.35
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 601.0
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 588.14
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 586.34
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 566.91
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 543.71
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 537.85
     coal:
-    - datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 866.7004193423496
+      - datetime: '2020-01-01'
+        source: eGrid 2020; IPCC 2014
+        value: 828.4856555
+      - datetime: '2021-01-01'
+        source: eGrid 2021; IPCC 2014
+        value: 866.7
     gas:
-    - datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 559.9025360279061
-    geothermal:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 116.28737905336972
+      - datetime: '2020-01-01'
+        source: eGrid 2020; IPCC 2014
+        value: 566.0159719999999
+      - datetime: '2021-01-01'
+        source: eGrid 2021; IPCC 2014
+        value: 559.9
+    hydro discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 561.0881002838488
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 609.5529341397407
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 599.11
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 624.35
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 601.0
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 588.14
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 586.34
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 566.91
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 543.71
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 537.85
     oil:
-    - datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 1035.3672765485921
+      - datetime: '2014-01-01'
+        source: IPCC 2014; EIA 2020/BEIS 2021
+        value: 650.0
+      - datetime: '2021-01-01'
+        source: eGrid 2021; IPCC 2014
+        value: 1035.37
+    solar:
+      datetime: '2021-01-01'
+      source: INCER ACV
+      value: 25.6
 fallbackZoneMixes:
   powerOriginRatios:
-  - _source: Electricity Maps, 2015 average
-    datetime: '2015-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.29949770253984176
-      gas: 0.607216900507734
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.05601559540906811
-      oil: 0.017035436173037325
-      solar: 0.012130367481323326
-      unknown: 0.00810344359367948
-      wind: 0.0
-  - _source: Electricity Maps, 2016 average
-    datetime: '2016-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.29949782223725796
-      gas: 0.6072171431883738
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.05601561779629172
-      oil: 0.0170354429814291
-      solar: 0.012129973097258556
-      unknown: 0.008103446832306195
-      wind: 0.0
-  - _source: Electricity Maps, 2017 average
-    datetime: '2017-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.2734776240561849
-      gas: 0.6454578341304538
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.05730370582379923
-      oil: 0.00030257415071995226
-      solar: 0.014987948718757638
-      unknown: 0.008470442891409838
-      wind: 0.0
-  - _source: Electricity Maps, 2018 average
-    datetime: '2018-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.3641178606154934
-      gas: 0.5550564513927738
-      geothermal: 0.0
-      hydro: 0.00024160466813817158
-      hydro discharge: 1.2395866220398879e-05
-      nuclear: 0.06387327960198631
-      oil: 0.00010536543937167994
-      solar: 0.003652549037572886
-      unknown: 0.012940050627756943
-      wind: 4.3237371710999716e-07
-  - _source: Electricity Maps, 2019 average
-    datetime: '2019-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.2973894213571623
-      gas: 0.6008549274046878
-      geothermal: 0.0
-      hydro: 0.00018261088631565988
-      hydro discharge: 1.1288280000011357e-06
-      nuclear: 0.07012059593726101
-      oil: 0.00016543937427397593
-      solar: 0.0068235967197151975
-      unknown: 0.02446136735924484
-      wind: 2.6988844047646196e-07
-  - _source: Electricity Maps, 2020 average
-    datetime: '2020-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.2598403615941424
-      gas: 0.6265408296869334
-      geothermal: 0.0
-      hydro: 0.00019896247647282068
-      hydro discharge: 9.463350814286271e-07
-      nuclear: 0.07316917711335676
-      oil: 0.0002615358075839743
-      solar: 0.01207654328171272
-      unknown: 0.02791106706673254
-      wind: 1.4429932092706015e-07
-  - _source: Electricity Maps, 2021 average
-    datetime: '2021-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.26424992229601063
-      gas: 0.6096662717625891
-      geothermal: 0.0
-      hydro: 0.0001349089002806099
-      hydro discharge: 7.950978632497339e-07
-      nuclear: 0.06915536091861439
-      oil: 0.00022086975935840583
-      solar: 0.0272145478284471
-      unknown: 0.029356386611274307
-      wind: 4.208054073221236e-07
-  - _source: Electricity Maps, 2022 average
-    datetime: '2022-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.20150531927757326
-      gas: 0.6723591624049727
-      geothermal: 0.0
-      hydro: 0.00011082154199776624
-      hydro discharge: 3.8517448507641324e-07
-      nuclear: 0.06659007580556685
-      oil: 0.0003779571540014642
-      solar: 0.028527119394667944
-      unknown: 0.0305278928062719
-      wind: 9.143755326240925e-07
-  - _source: Electricity Maps, 2023 average
-    datetime: '2023-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.16761275063951062
-      gas: 0.687899878073198
-      geothermal: 0.0
-      hydro: 0.0002078957300194654
-      hydro discharge: 8.463719125137084e-07
-      nuclear: 0.07954263507492554
-      oil: 0.0003316975402539143
-      solar: 0.033927873479998816
-      unknown: 0.030475120624263923
-      wind: 9.479827287500063e-07
-  - _source: Electricity Maps, 2024 average
-    datetime: '2024-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.14600391089901532
-      gas: 0.7315339642642004
-      geothermal: 0.0
-      hydro: 0.00015121069946508203
-      hydro discharge: 7.322136708176398e-07
-      nuclear: 0.06965895353125312
-      oil: 0.00020001279422783547
-      solar: 0.0368809604380467
-      unknown: 0.015569004071754993
-      wind: 9.010623577192186e-07
+    - _source: Electricity Maps, 2015 average
+      datetime: '2015-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.29949770253984176
+        gas: 0.607216900507734
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.05601559540906811
+        oil: 0.017035436173037325
+        solar: 0.012130367481323326
+        unknown: 0.00810344359367948
+        wind: 0.0
+    - _source: Electricity Maps, 2016 average
+      datetime: '2016-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.29949782223725796
+        gas: 0.6072171431883738
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.05601561779629172
+        oil: 0.0170354429814291
+        solar: 0.012129973097258556
+        unknown: 0.008103446832306195
+        wind: 0.0
+    - _source: Electricity Maps, 2017 average
+      datetime: '2017-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.2734776240561849
+        gas: 0.6454578341304538
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.05730370582379923
+        oil: 0.00030257415071995226
+        solar: 0.014987948718757638
+        unknown: 0.008470442891409838
+        wind: 0.0
+    - _source: Electricity Maps, 2018 average
+      datetime: '2018-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.3641178606154934
+        gas: 0.5550564513927738
+        geothermal: 0.0
+        hydro: 0.00024160466813817158
+        hydro discharge: 1.2395866220398879e-05
+        nuclear: 0.06387327960198631
+        oil: 0.00010536543937167994
+        solar: 0.003652549037572886
+        unknown: 0.012940050627756943
+        wind: 4.3237371710999716e-07
+    - _source: Electricity Maps, 2019 average
+      datetime: '2019-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.2973894213571623
+        gas: 0.6008549274046878
+        geothermal: 0.0
+        hydro: 0.00018261088631565988
+        hydro discharge: 1.1288280000011357e-06
+        nuclear: 0.07012059593726101
+        oil: 0.00016543937427397593
+        solar: 0.0068235967197151975
+        unknown: 0.02446136735924484
+        wind: 2.6988844047646196e-07
+    - _source: Electricity Maps, 2020 average
+      datetime: '2020-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.2598403615941424
+        gas: 0.6265408296869334
+        geothermal: 0.0
+        hydro: 0.00019896247647282068
+        hydro discharge: 9.463350814286271e-07
+        nuclear: 0.07316917711335676
+        oil: 0.0002615358075839743
+        solar: 0.01207654328171272
+        unknown: 0.02791106706673254
+        wind: 1.4429932092706015e-07
+    - _source: Electricity Maps, 2021 average
+      datetime: '2021-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.26424992229601063
+        gas: 0.6096662717625891
+        geothermal: 0.0
+        hydro: 0.0001349089002806099
+        hydro discharge: 7.950978632497339e-07
+        nuclear: 0.06915536091861439
+        oil: 0.00022086975935840583
+        solar: 0.0272145478284471
+        unknown: 0.029356386611274307
+        wind: 4.208054073221236e-07
+    - _source: Electricity Maps, 2022 average
+      datetime: '2022-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.20150531927757326
+        gas: 0.6723591624049727
+        geothermal: 0.0
+        hydro: 0.00011082154199776624
+        hydro discharge: 3.8517448507641324e-07
+        nuclear: 0.06659007580556685
+        oil: 0.0003779571540014642
+        solar: 0.028527119394667944
+        unknown: 0.0305278928062719
+        wind: 9.143755326240925e-07
+    - _source: Electricity Maps, 2023 average
+      datetime: '2023-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.16761275063951062
+        gas: 0.687899878073198
+        geothermal: 0.0
+        hydro: 0.0002078957300194654
+        hydro discharge: 8.463719125137084e-07
+        nuclear: 0.07954263507492554
+        oil: 0.0003316975402539143
+        solar: 0.033927873479998816
+        unknown: 0.030475120624263923
+        wind: 9.479827287500063e-07
+    - _source: Electricity Maps, 2024 average
+      datetime: '2024-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.14600391089901532
+        gas: 0.7315339642642004
+        geothermal: 0.0
+        hydro: 0.00015121069946508203
+        hydro discharge: 7.322136708176398e-07
+        nuclear: 0.06965895353125312
+        oil: 0.00020001279422783547
+        solar: 0.0368809604380467
+        unknown: 0.015569004071754993
+        wind: 9.010623577192186e-07
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
