--- a/config/zones/US-FLA-SEC.yaml
+++ b/config/zones/US-FLA-SEC.yaml
@@ -1,80 +1,80 @@
 bounding_box:
-- - -85.65399
-  - 25.7184577510001
-- - -80.123257233
-  - 31.2115600000001
+  - - -85.65399
+    - 25.7184577510001
+  - - -80.123257233
+    - 31.2115600000001
 capacity:
   battery storage:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   biomass:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 17.6
-  - datetime: '2018-01-01'
-    source: EIA.gov
-    value: 1.6
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 17.6
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1.6
   coal:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 1471.8
-  - datetime: '2020-01-01'
-    source: EIA.gov
-    value: 1429.2
-  - datetime: '2023-12-01'
-    source: EIA.gov
-    value: 714.6
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1471.8
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1429.2
+    - datetime: '2023-12-01'
+      source: EIA.gov
+      value: 714.6
   gas:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 897.0
-  - datetime: '2020-01-01'
-    source: EIA.gov
-    value: 853.3
-  - datetime: '2023-04-01'
-    source: EIA.gov
-    value: 2036.5
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 897.0
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 853.3
+    - datetime: '2023-04-01'
+      source: EIA.gov
+      value: 2036.5
   geothermal:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   hydro:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   hydro storage:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   nuclear:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   oil:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   solar:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 10
-  - datetime: '2023-09-01'
-    source: EIA.gov
-    value: 74.5
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 10
+    - datetime: '2023-09-01'
+      source: EIA.gov
+      value: 74.5
   unknown:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
   wind:
-  - datetime: '2017-01-01'
-    source: EIA.gov
-    value: 0.0
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
 comment: Seminole Electric Cooperative
 contributors:
-- systemcatch
-- robertahunt
-- KabelWlan
+  - systemcatch
+  - robertahunt
+  - KabelWlan
 country: US
 country_name: USA
 delays:
@@ -82,182 +82,304 @@ delays:
   consumptionForecast: 30
   production: 48
 emissionFactors:
-  lifecycle:
-    biomass:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021
-      value: 280.6015234636058
+  direct:
+    battery discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 375.6156090155082
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 394.6535931946128
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 394.65359249008145
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 387.0179431883102
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 721.2152218900337
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 704.620342180618
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 699.4161197629264
     coal:
-    - datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 1000.1477267918307
+      - datetime: '2020-01-01'
+        source: eGrid 2020
+        value: 964.3118179
+      - datetime: '2021-01-01'
+        source: eGrid 2021
+        value: 940.15
     gas:
-    - datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 507.4041558239329
-    geothermal:
-    - _comment: Mean of all US zones
-      datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 116.28737905336972
+      - datetime: '2020-01-01'
+        source: eGrid 2020
+        value: 386.3298038
+      - datetime: '2021-01-01'
+        source: eGrid 2021
+        value: 387.4
+    hydro discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 375.6156090155082
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 394.6535931946128
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 394.65359249008145
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 387.0179431883102
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 721.2152218900337
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 704.620342180618
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 699.4161197629264
+  lifecycle:
+    battery discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 494.74568708750655
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 514.3329608680659
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 752.14
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 874.08
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 823.0
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 811.13
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 792.91
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 780.35
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 656.29
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 592.15
+    coal:
+      - datetime: '2020-01-01'
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
+        value: 1062.1123579
+      - datetime: '2021-01-01'
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
+        value: 1037.95054
+    gas:
+      - datetime: '2020-01-01'
+        source: eGrid 2020; IPCC 2014
+        value: 506.3298038
+      - datetime: '2021-01-01'
+        source: eGrid 2021; IPCC 2014
+        value: 507.4
+    hydro discharge:
+      - datetime: '2015-01-01'
+        source: Electricity Maps, 2015 average
+        value: 494.74568708750655
+      - datetime: '2016-01-01'
+        source: Electricity Maps, 2016 average
+        value: 514.3329608680659
+      - datetime: '2017-01-01'
+        source: Electricity Maps, 2017 average
+        value: 752.14
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 874.08
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 823.0
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 811.13
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 792.91
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 780.35
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 656.29
+      - datetime: '2024-01-01'
+        source: Electricity Maps, 2024 average
+        value: 592.15
     oil:
-    - _comment: Mean of all US zones
+      datetime: '2014-01-01'
+      source: IPCC 2014; EIA 2020/BEIS 2021
+      value: 650.0
+    solar:
       datetime: '2021-01-01'
-      source: eGrid 2021; IPCC 2014
-      value: 998.5315891025153
+      source: INCER ACV
+      value: 25.6
 fallbackZoneMixes:
   powerOriginRatios:
-  - _source: Electricity Maps, 2015 average
-    datetime: '2015-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.014416969634279101
-      gas: 0.9855614963288232
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.0
-      oil: 0.0
-      solar: 2.151871963618696e-05
-      unknown: 0.0
-      wind: 0.0
-  - _source: Electricity Maps, 2016 average
-    datetime: '2016-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.014416969686159187
-      gas: 0.9855614998754085
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.0
-      oil: 0.0
-      solar: 2.1515138889387014e-05
-      unknown: 0.0
-      wind: 0.0
-  - _source: Electricity Maps, 2017 average
-    datetime: '2017-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.44257049401155596
-      gas: 0.5570939909760182
-      geothermal: 0.0
-      hydro: 0.0
-      hydro discharge: 0.0
-      nuclear: 0.0
-      oil: 0.0
-      solar: 0.0003366828308859193
-      unknown: 0.0
-      wind: 0.0
-  - _source: Electricity Maps, 2018 average
-    datetime: '2018-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.6621526369032708
-      gas: 0.3331527052298563
-      geothermal: 0.0
-      hydro: 1.7593262005230038e-05
-      hydro discharge: 8.860767964496114e-07
-      nuclear: 0.0013051457319357156
-      oil: 6.727473940081793e-06
-      solar: 0.0006312182178289241
-      unknown: 0.002731833966803581
-      wind: 0.0
-  - _source: Electricity Maps, 2020 average
-    datetime: '2020-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.5482004102555483
-      gas: 0.44713114646326346
-      geothermal: 0.0
-      hydro: 2.1493691309888375e-05
-      hydro discharge: 0.0
-      nuclear: 0.001182448961932077
-      oil: 6.536043816893673e-06
-      solar: 0.0011647348457659809
-      unknown: 0.002287792899845715
-      wind: 0.0
-  - _source: Electricity Maps, 2021 average
-    datetime: '2021-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.5439562804746765
-      gas: 0.44756432580206607
-      geothermal: 0.0
-      hydro: 1.7252169317802387e-05
-      hydro discharge: 1.4614289976960936e-08
-      nuclear: 0.0015843059478223812
-      oil: 7.3875235833537545e-06
-      solar: 0.00435432769863551
-      unknown: 0.0025119699255449417
-      wind: 4.384286993088281e-08
-  - _source: Electricity Maps, 2019 average
-    datetime: '2019-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.5732980145305351
-      gas: 0.41854626645572013
-      geothermal: 0.0
-      hydro: 3.703429966782468e-05
-      hydro discharge: 0.0
-      nuclear: 0.0026253806591243333
-      oil: 1.6920843813747482e-06
-      solar: 0.0015752667068190838
-      unknown: 0.003912003311377208
-      wind: 0.0
-  - _source: Electricity Maps, 2022 average
-    datetime: '2022-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.5164710147740914
-      gas: 0.47896024284421373
-      geothermal: 0.0
-      hydro: 2.2284036680364155e-05
-      hydro discharge: 0.0
-      nuclear: 0.0014356908019629406
-      oil: 1.0317239055242622e-05
-      solar: 0.0012906046277485913
-      unknown: 0.0018078012233536246
-      wind: 0.0
-  - _source: Electricity Maps, 2023 average
-    datetime: '2023-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.28339773046064076
-      gas: 0.708710271372197
-      geothermal: 0.0
-      hydro: 2.9376835175522264e-05
-      hydro discharge: 0.0
-      nuclear: 0.0009280003366436627
-      oil: 4.179992144981205e-06
-      solar: 0.002355967944042342
-      unknown: 0.004573018945557239
-      wind: 0.0
-  - _source: Electricity Maps, 2024 average
-    datetime: '2024-01-01'
-    value:
-      battery discharge: 0.0
-      biomass: 0.0
-      coal: 0.1619842306768427
-      gas: 0.8344185956841966
-      geothermal: 0.0
-      hydro: 2.1145730524378035e-05
-      hydro discharge: 0.0
-      nuclear: 0.0005487189687157279
-      oil: 3.9790104097350996e-06
-      solar: 0.0018365194344341143
-      unknown: 0.0011848510985980577
-      wind: 0.0
+    - _source: Electricity Maps, 2015 average
+      datetime: '2015-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.014416969634279101
+        gas: 0.9855614963288232
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.0
+        oil: 0.0
+        solar: 2.151871963618696e-05
+        unknown: 0.0
+        wind: 0.0
+    - _source: Electricity Maps, 2016 average
+      datetime: '2016-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.014416969686159187
+        gas: 0.9855614998754085
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.0
+        oil: 0.0
+        solar: 2.1515138889387014e-05
+        unknown: 0.0
+        wind: 0.0
+    - _source: Electricity Maps, 2017 average
+      datetime: '2017-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.44257049401155596
+        gas: 0.5570939909760182
+        geothermal: 0.0
+        hydro: 0.0
+        hydro discharge: 0.0
+        nuclear: 0.0
+        oil: 0.0
+        solar: 0.0003366828308859193
+        unknown: 0.0
+        wind: 0.0
+    - _source: Electricity Maps, 2018 average
+      datetime: '2018-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.6621526369032708
+        gas: 0.3331527052298563
+        geothermal: 0.0
+        hydro: 1.7593262005230038e-05
+        hydro discharge: 8.860767964496114e-07
+        nuclear: 0.0013051457319357156
+        oil: 6.727473940081793e-06
+        solar: 0.0006312182178289241
+        unknown: 0.002731833966803581
+        wind: 0.0
+    - _source: Electricity Maps, 2020 average
+      datetime: '2020-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.5482004102555483
+        gas: 0.44713114646326346
+        geothermal: 0.0
+        hydro: 2.1493691309888375e-05
+        hydro discharge: 0.0
+        nuclear: 0.001182448961932077
+        oil: 6.536043816893673e-06
+        solar: 0.0011647348457659809
+        unknown: 0.002287792899845715
+        wind: 0.0
+    - _source: Electricity Maps, 2021 average
+      datetime: '2021-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.5439562804746765
+        gas: 0.44756432580206607
+        geothermal: 0.0
+        hydro: 1.7252169317802387e-05
+        hydro discharge: 1.4614289976960936e-08
+        nuclear: 0.0015843059478223812
+        oil: 7.3875235833537545e-06
+        solar: 0.00435432769863551
+        unknown: 0.0025119699255449417
+        wind: 4.384286993088281e-08
+    - _source: Electricity Maps, 2019 average
+      datetime: '2019-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.5732980145305351
+        gas: 0.41854626645572013
+        geothermal: 0.0
+        hydro: 3.703429966782468e-05
+        hydro discharge: 0.0
+        nuclear: 0.0026253806591243333
+        oil: 1.6920843813747482e-06
+        solar: 0.0015752667068190838
+        unknown: 0.003912003311377208
+        wind: 0.0
+    - _source: Electricity Maps, 2022 average
+      datetime: '2022-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.5164710147740914
+        gas: 0.47896024284421373
+        geothermal: 0.0
+        hydro: 2.2284036680364155e-05
+        hydro discharge: 0.0
+        nuclear: 0.0014356908019629406
+        oil: 1.0317239055242622e-05
+        solar: 0.0012906046277485913
+        unknown: 0.0018078012233536246
+        wind: 0.0
+    - _source: Electricity Maps, 2023 average
+      datetime: '2023-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.28339773046064076
+        gas: 0.708710271372197
+        geothermal: 0.0
+        hydro: 2.9376835175522264e-05
+        hydro discharge: 0.0
+        nuclear: 0.0009280003366436627
+        oil: 4.179992144981205e-06
+        solar: 0.002355967944042342
+        unknown: 0.004573018945557239
+        wind: 0.0
+    - _source: Electricity Maps, 2024 average
+      datetime: '2024-01-01'
+      value:
+        battery discharge: 0.0
+        biomass: 0.0
+        coal: 0.1619842306768427
+        gas: 0.8344185956841966
+        geothermal: 0.0
+        hydro: 2.1145730524378035e-05
+        hydro discharge: 0.0
+        nuclear: 0.0005487189687157279
+        oil: 3.9790104097350996e-06
+        solar: 0.0018365194344341143
+        unknown: 0.0011848510985980577
+        wind: 0.0
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
